--- a/bevande/bevande.html
+++ b/bevande/bevande.html
@@ -14,7 +14,7 @@
    </nav>
    <ul id="ul">
    	
-   	<li><a href="../cena/cena.html">Cena</a></li>
+   	<li><a href="../cena/cena.html">Menu</a></li>
       <li><a href="../dessert/dessert.html">Dessert</a></li>
    	<li><a href="../aperitivo/aperitivo.html">Aperitivo</a></li>
    	<li><a href="../bar/bar.html">Bar</a></li>
