--- a/aperitivo/aperitivo.html
+++ b/aperitivo/aperitivo.html
@@ -13,7 +13,7 @@
      <h1 id="titolo">Rava'</h1>
    </nav>
    <ul id="ul">
-   	<li><a href="../cena/cena.html">Cena</a></li>
+   	<li><a href="../cena/cena.html">Menu</a></li>
     <li><a href="../dessert/dessert.html">Dessert</a></li>
    	<li><a id="selected">Aperitivo</a></li>
    	<li><a href="../bar/bar.html">Bar</a></li>
