--- a/cena/cena.html
+++ b/cena/cena.html
@@ -14,7 +14,7 @@
    </nav>
    <ul id="ul">
    	
-   	<li><a id="selected">Cena</a></li>
+   	<li><a id="selected">Menu</a></li>
     <li><a href="../dessert/dessert.html">Dessert</a></li>
    	<li><a href="../aperitivo/aperitivo.html">Aperitivo</a></li>
    	<li><a href="../bar/bar.html">Bar</a></li>
