--- a/aperitivo.html
+++ b/aperitivo.html
@@ -2,29 +2,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="../pranzo/pranzo.css" rel="stylesheet">
+	<link href="static/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="shortcut icon" href="../pranzo/svg/logo.svg" />
+  <link rel="shortcut icon" href="static/svg/logo.svg" />
 	<title>Rava Pranzo</title>
 </head>
 <body>
+ <div class="bg">
+   <div class="shape1"></div>
+   <div class="shape2"></div>
+  </div>
 
    <nav id="navbar">
-     <h1 id="titolo">Rava'</h1>
+     <img src="static/svg/logo.svg" id="titolo">
    </nav>
    <ul id="ul">
-   	<li><a href="../cena/cena.html">Menu</a></li>
-    <li><a href="../dessert/dessert.html">Dessert</a></li>
+   	<li><a href="index.html">Menu</a></li>
+    <li><a href="bevande.html">Bevande</a></li>
+    <li><a href="dessert.html">Dessert</a></li>
    	<li><a id="selected">Aperitivo</a></li>
-   	<li><a href="../bar/bar.html">Bar</a></li>
-   	<li><a href="../bevande/bevande.html">Bevande</a></li>
+   	<li><a href="bar.html">Bar</a></li>
+
    </ul>
 
-   <div class="menu">
+   <div class="menu" id="primo">
    
 
 
-<h2>Aperitivi</h2>
+
+  <h2>Aperitivo</h2>
+
 <div class="row">
 <p class="pietanza">Spritz</p>
 <p>5.5</p>
@@ -98,6 +105,6 @@
 		src="https://code.jquery.com/jquery-3.6.0.min.js"
 		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 		crossorigin="anonymous"></script>
-   <script src="../pranzo/pranzo.js"></script>
+   <script src="static/app.js"></script>
 </body>
 </html>
