--- a/index.html
+++ b/index.html
@@ -1,231 +1,269 @@
-<!DOCTYPE html>
-<!DOCTYPE html>
-<html>
-<head>
-  <link href="pranzo/pranzo.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="shortcut icon" href="../pranzo/svg/logo.svg" />
-  <title>Rava Pranzo</title>
-</head>
-<body>
+<!DOCYTPE html>
+  <!DOCTYPE html>
+  <html>
+  <head>
+     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+   <link rel="shortcut icon" href="static/svg/logo.svg" />
+    <link href="static/style.css" rel="stylesheet">
+    <title>Rava Pranzo</title>
+     <meta charset="utf-8">
+     <title>Menu</title>
+  </head>
+  <body>
+
+  <div class="bg">
+   <div class="shape1"></div>
+   <div class="shape2"></div>
+  </div>
+
+
 
    <nav id="navbar">
-     <h1 id="titolo">Rava'</h1>
+     <img src="static/svg/logo.svg" id="titolo">
+     
    </nav>
    <ul id="ul">
     <li><a id="selected">Menu</a></li>
-    <li><a href="dessert/dessert.html">Dessert</a></li>
-    <li><a href="aperitivo/aperitivo.html">Aperitivo</a></li>
-    <li><a href="bar/bar.html">Bar</a></li>
-    <li><a href="bevande/bevande.html">Bevande</a></li>
+    <li><a href="bevande.html">Bevande</a></li></li>
+    <li><a href="dessert.html">Dessert</a>
+    <li><a href="aperitivo.html">Aperitivo</a></li>
+    <li><a href="bar.html">Bar</a></li>
+
+
    </ul>
-
-   <div class="menu">
-     <div class="panini">
-    <div class="wrap" id="primo">
-    <h1 class="titolo">Il Rava'</h1>
-    <div class="box" id="b1">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d1">
-           <p class="desc">Bun Artigianale con sesamo,
-           Hamburger (Scottona 120g), Pesto di rucola,
-           Pomodorini confit, Speck croccante,
-           Cheddar, Salsa bbq al Jack Daniels</p>
-           <p class="prezzo">- 8 -</p>
-        </div>
-    </div>
-    </div>
-
-<div class="wrap">
-    <h1 class="titolo">Chicken Trophy</h1>
-    <div class="box" id="b2">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d2">
-           <p class="desc">Bun Artigianale con sesamo,
-hamburger di pollo pastellato ( 150g),
-Iceberg, porro fritto, Provola affumicata,
-Maionese all’erba cipollina</p>
-           <p class="prezzo">- 8.5 -</p>
-        </div>
-    </div>
-</div>
+ 
 
 
-
-<div class="wrap">
-    <h1 class="titolo">The Gravy</h1>
-    <div class="box" id="b3">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d3">
-           <p class="desc">Bun Artigianale con sesamo,
-Doppio Hamburger (scottona 120g x2),
-Iceberg, Pomodoro, Cheddar, Cipolla caramellata,
-Bacon croccante, Senape al miele, Ketchup</p>
-           <p class="prezzo">- 11.5 -</p>
-        </div>
-    </div>
-</div>
-
-
-
-<div class="wrap">
-    <h1 class="titolo">Il Gourmet</h1>
-    <div class="box" id="b4">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d4">
-           <p class="desc">Bun Artigianale con sesamo,
-Hamburger (scottona 120g), Julienne
-di iceberg in citronette alle erbe aromatiche,
-Pomodorini cofit, Cialda di pecorino, Salsa Rava’ á,
-Maionese</p>
-           <p class="prezzo">- 8.5 -</p>
-        </div>
-    </div>
-</div>
-
-<div class="wrap">
-        <h1 class="titolo">Il Classico</h1>
-    <div class="box" id="b5">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d5">
-           <p class="desc">Bun Artigianale con sesamo, Cetriolini
-Hamburger (scottona 120g), Insalata, Pomodoro,
-Cheddar, Bacon croccante, Ketchup e maionese</p>
-           <p class="prezzo">- 8 -</p>
-        </div>
-    </div>
-</div>
-
-
-<div class="wrap">
-        <h1 class="titolo">Pulled Pork</h1>
-    <div class="box" id="b6">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d6">
-           <p class="desc">Bun Artigianale con sesamo, 150g di sfilacci
-di maiale, Cipolla rossa caramellata,
-Bacon croccante, Cheddar, Senape al miele</p>
-           <p class="prezzo">- 7.5 -</p>
-        </div>
-    </div>
-</div>
-
-
-
-
-<div class="wrap">
-        <h1 class="titolo">Il Piccante</h1>
-    <div class="box" id="b7">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d7">
-           <p class="desc">Bun Artigianale con sesamo, Hamburger
-piccante (scottona 120g), Iceberg, Pomodoro,
-Nduja, Senape al miele, bbq piccante</p>
-           <p class="prezzo">- 8.5 -</p>
-        </div>
-    </div>
-</div>
-
-
-
-<div class="wrap">
-        <h1 class="titolo">Il Pirata</h1>
-    <div class="box" id="b8">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d8">
-           <p class="desc">Bun Artigianale con sesamo, Filetto di platessa
-150g (pastellato alle erbe aromatiche FRITTO),
-Julienne di iceberg in citronette alle erbe aromatiche,
-Pesto di rucola, Julienne di zucchine marinate in salsa
-teriyaki, Pom. confit, maionese all’erba cipollina</p>
-           <p class="prezzo">- 8 -</p>
-        </div>
-    </div>
-</div>
-
-
-
-<div class="wrap">
-        <h1 class="titolo">Il Delicato</h1>
-    <div class="box" id="b9">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d9">
-           <p class="desc">Bun Artigianale con sesamo, 150g di petto
-di pollo alla griglia, Julienne di iceberg in
-citronette alle erbe aromatiche, Scaglie di grana,
-Julienne di zucchine in salsa teryaki</p>
-           <p class="prezzo">- 8.5 -</p>
-        </div>
-    </div>
-
-</div>
-
-
-
-<div class="wrap">
-        <h1 class="titolo">Vegan Size</h1>
-    <div class="box" id="b10">
-        <img src="pranzo/svg/panino.svg">
-        <div class="descrizione" id="d10">
-           <p class="desc">Bun Artigianale, Hamburger di verdure miste (150g),
-Iceberg, Julienne di zucchine marinate
-in salsa teryaki, Pomodorini confit, pesto di rucola á</p>
-           <p class="prezzo">- 7 -</p>
-        </div>
-    </div>
+<div class="menuPanino" id="primo">
+   <h2>Panini</h2>
+   <img src="static/svg/panino3d.svg">
+   <div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">il rava</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- Hamburger (Scottona 120g)</p>
+       <p class="ingPanino">- Pesto di rucola</p>
+       <p class="ingPanino">- Pomodorini confit</p>
+       <p class="ingPanino">- Speck croccante</p>
+       <p class="ingPanino">- Cheddar</p>
+       <p class="ingPanino">- Salsa bbq al Jack Daniels</p>
+     </div class="paninoDesc">
+     <p>8</p>
    </div>
+
+<div class="span"></div>
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">Chicken Trophy</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- Hamburger di pollo pastellato ( 150g)</p>
+       <p class="ingPanino">- Iceberg</p>
+       <p class="ingPanino">- Porro fritto</p>
+       <p class="ingPanino">- Provola affumicata</p>
+       <p class="ingPanino">- Maionese all’erba cipollina</p>
+     </div class="paninoDesc">
+     <p>8.5</p>
+   </div>
+
+<div class="span"></div>
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">The Gravy</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- Doppio Hamburger (scottona 120g x2)</p>
+       <p class="ingPanino">- Iceberg</p>
+       <p class="ingPanino">- Pomodoro</p>
+       <p class="ingPanino">- Cheddar</p>
+       <p class="ingPanino">- Cipolla caramellata</p>
+       <p class="ingPanino">- Bacon croccante</p>
+       <p class="ingPanino">- Senape al miele</p>
+       <p class="ingPanino">- Ketchup</p>
+     </div class="paninoDesc">
+     <p>11.5</p>
+   </div>
+
+<div class="span"></div>
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">il gourmet</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- Hamburger (scottona 120g)</p>
+       <p class="ingPanino">- ulienne
+di iceberg in citronette alle erbe aromatiche</p>
+       <p class="ingPanino">- Pomodorini confit</p>
+       <p class="ingPanino">- Cialda di pecorino</p>
+       <p class="ingPanino">- Salsa Rava’</p>
+       <p class="ingPanino">- Maionese</p>
+     </div class="paninoDesc">
+     <p>8.5</p>
+   </div>
+
+<div class="span"></div>
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">il classico</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- Hamburger (Scottona 120g)</p>
+       <p class="ingPanino">- Cetriolini</p>
+       <p class="ingPanino">- Insalata</p>
+       <p class="ingPanino">- Pomodori</p>
+       <p class="ingPanino">- Cheddar</p>
+       <p class="ingPanino">- Bacon croccante</p>
+       <p class="ingPanino">- Ketchup e maionese</p>
+     </div class="paninoDesc">
+     <p>8</p>
+   </div>
+
+<div class="span"></div>
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">pulled pork</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- 150g di sfilacci di maiale</p>
+       <p class="ingPanino">- Cipolla rossa caramellata</p>
+       <p class="ingPanino">- Bacon croccante</p>
+       <p class="ingPanino">- Cheddar</p>
+       <p class="ingPanino">- Senape al miele</p>
+     </div class="paninoDesc">
+     <p>7.5</p>
+   </div>
+
+<div class="span"></div>
+
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">il pirata</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- Filetto di platessa 150g (pastellato alle erbe aromatiche FRITTO)</p>
+       <p class="ingPanino">- Julienne di iceberg in citronette alle erbe aromatiche</p>
+       <p class="ingPanino">- Pesto di rucola</p>
+       <p class="ingPanino">- Julienne di zucchine marinate in salsa
+teriyaki</p>
+       <p class="ingPanino">- Pomodorini confit</p>
+       <p class="ingPanino">- Maionese all’erba cipollina</p>
+     </div class="paninoDesc">
+     <p>8</p>
+   </div>
+
+<div class="span"></div>
+
+
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">il piccante</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- Hamburger
+piccante (scottona 120g)</p>
+       <p class="ingPanino">- Iceberg</p>
+       <p class="ingPanino">- Pomodoro</p>
+       <p class="ingPanino">- Nduja</p>
+       <p class="ingPanino">- Senape al miele</p>
+       <p class="ingPanino">- Bbq piccante</p>
+     </div class="paninoDesc">
+     <p>8.5</p>
+   </div>
+
+<div class="span"></div>
+
+
+
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">il delicato</p>
+       <p class="ingPanino">- Bun Artigianale con sesamo</p>
+       <p class="ingPanino">- 150g di petto di pollo alla griglia</p>
+       <p class="ingPanino">- lienne di iceberg in citronette alle erbe aromatiche</p>
+       <p class="ingPanino">- Scaglie di grana</p>
+       <p class="ingPanino">- Julienne di zucchine in salsa teryaki</p>
+
+     </div class="paninoDesc">
+     <p>8.5</p>
+   </div>
+
+<div class="span"></div>
+
+
+
+<div class="rowpanino">
+     <div class="paninoDesc">
+       <p class="titoloPanino">vegan size</p>
+       <p class="ingPanino">- Bun Artigianale</p>
+       <p class="ingPanino">- Hamburger di verdure miste (150g)</p>
+       <p class="ingPanino">- Iceberg</p>
+       <p class="ingPanino">- Julienne di zucchine marinate in salsa teryaki</p>
+       <p class="ingPanino">- Pomodorini confit</p>
+       <p class="ingPanino">- Pesto di rucola</p>
+     </div class="paninoDesc">
+     <p>7</p>
+   </div>
+
+
 </div>
 
 
 
+
+
+
+  <div class="menu" id="ultimo">
 <h2>Fried</h2>
 <div class="row">
-<p class="pietanza">Patate rustiche</p>
+<p>Patate rustiche</p>
 <p>3</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Suppli'</p>
+<p>Suppli'</p>
 <p>2</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Crocchette patate (2)</p>
+<p>Crocchette di patate (2)</p>
 <p>1.5</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Fiore di zucca</p>
+<p>Fiore di zucca</p>
 <p>2.5</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Scaloppina Agrumi</p>
-<p>2.5</p>
-</div>
-
-<div class="span"></div>
-
-<div class="row">
-<p class="pietanza">Verdura in pastella</p>
+<p>Verdure in pastella</p>
 <p>3</p>
 </div>
 
+</div>
 
-   </div>
 
-   <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"></script>
-   <script src="pranzo/pranzo.js"></script>
-</body>
-</html>
+
+
+
+
+
+
+
+
+<script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+   <script src="static/app.js"></script>
+
+  </body>
+  </html>
