--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
 
 
+   <div class="tooWidth">
+    <img src="static/svg/logo.svg">
+    <h1>Sito non ancora ottimizzato per queste dimensioni dello schermo</h1>
+   </div>
+
    <nav id="navbar">
      <img src="static/svg/logo.svg" id="titolo">
      
@@ -36,7 +41,6 @@
 
 <div class="menuPanino" id="primo">
    <h2>Panini</h2>
-   <img src="static/svg/panino3d.svg">
    <div class="rowpanino">
      <div class="paninoDesc">
        <p class="titoloPanino">il rava</p>
@@ -214,7 +218,7 @@ piccante (scottona 120g)</p>
 
 
   <div class="menu" id="ultimo">
-<h2>Fried</h2>
+<h2>Fritti</h2>
 <div class="row">
 <p>Patate rustiche</p>
 <p>3</p>
