--- a/bevande.html
+++ b/bevande.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="static/style.css" rel="stylesheet">
+  <link href="static/style.css" rel="stylesheet">
    <meta name="viewport" content="width=device-width, initial-scale=1"/>
    <link rel="shortcut icon" href="static/svg/logo.svg" />
-	<title>Rava Pranzo</title>
+  <title>Rava Pranzo</title>
 </head>
 <body>
  <div class="bg">
@@ -16,11 +16,11 @@
      <img src="static/svg/logo.svg" id="titolo">
    </nav>
    <ul id="ul">
-   	<li><a href="index.html">Menu</a></li>
+    <li><a href="index.html">Menu</a></li>
     <li><a id="selected">Bevande</a></li>
       <li><a href="dessert.html">Dessert</a></li>
-   	<li><a href="aperitivo.html">Aperitivo</a></li>
-   	<li><a href="bar.html">Bar</a></li>
+    <li><a href="aperitivo.html">Aperitivo</a></li>
+    <li><a href="bar.html">Bar</a></li>
    </ul>
 
    <div class="menu" id="primo">
@@ -31,56 +31,56 @@
   <h2>Bevande</h2>
 
 <div class="row">
-<p class="pietanza">Coca Cola 33cl</p>
+<img src="static/svg/bevande/cocaCola.svg"><p class="pietanza">Coca Cola 33cl</p>
 <p>2.5</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Coca Cola Zero 33cl</p>
+<img src="static/svg/bevande/cocaColaZero.svg"><p class="pietanza">Coca Cola Zero 33cl</p>
 <p>2.5</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Fanta 33cl</p>
+<img src="static/svg/bevande/fanta.svg"><p class="pietanza">Fanta 33cl</p>
 <p>2.5</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Chinotto</p>
+<img src="static/svg/bevande/chinotto.svg"><p class="pietanza">Chinotto</p>
 <p>2.5</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Schweppes limone</p>
+<img src="static/svg/bevande/schwLimone.svg"><p class="pietanza">Schweppes limone</p>
 <p>2.5</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Schweppes arancia</p>
+<img src="static/svg/bevande/schwArancia.svg"><p class="pietanza">Schweppes arancia</p>
 <p>2.5</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Redbull</p>
+<img src="static/svg/bevande/redbull.svg"><p class="pietanza">Redbull</p>
 <p>3</p>
 </div>
 
 <div class="span"></div>
 
 <div class="row">
-<p class="pietanza">Cedrata</p>
+<img src="static/svg/bevande/cedrata.svg"><p class="pietanza">Cedrata</p>
 <p>3</p>
 </div>
 
@@ -88,9 +88,9 @@
    </div>
 
    <script
-		src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
    <script src="static/app.js"></script>
 </body>
 </html>
