--- a/index.html
+++ b/index.html
@@ -42,15 +42,22 @@
 <div class="menuPanino" id="primo">
    <h2>Panini</h2>
    <div class="rowpanino">
+     <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">il rava</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- Hamburger (Scottona 120g)</p>
-       <p class="ingPanino">- Pesto di rucola</p>
-       <p class="ingPanino">- Pomodorini confit</p>
-       <p class="ingPanino">- Speck croccante</p>
-       <p class="ingPanino">- Cheddar</p>
-       <p class="ingPanino">- Salsa bbq al Jack Daniels</p>
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Hamburger (Scottona 120g)</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Pesto di rucola</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Pomodorini confit</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Speck croccante</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Cheddar</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Salsa bbq al Jack Daniels</p>
      </div class="paninoDesc">
      <p>8</p>
    </div>
@@ -58,14 +65,20 @@
 <div class="span"></div>
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">Chicken Trophy</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- Hamburger di pollo pastellato ( 150g)</p>
-       <p class="ingPanino">- Iceberg</p>
-       <p class="ingPanino">- Porro fritto</p>
-       <p class="ingPanino">- Provola affumicata</p>
-       <p class="ingPanino">- Maionese all’erba cipollina</p>
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Hamburger di pollo pastellato ( 150g)</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Iceberg</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Porro fritto</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Provola affumicata</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Maionese all’erba cipollina</p>
      </div class="paninoDesc">
      <p>8.5</p>
    </div>
@@ -73,17 +86,26 @@
 <div class="span"></div>
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">The Gravy</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- Doppio Hamburger (scottona 120g x2)</p>
-       <p class="ingPanino">- Iceberg</p>
-       <p class="ingPanino">- Pomodoro</p>
-       <p class="ingPanino">- Cheddar</p>
-       <p class="ingPanino">- Cipolla caramellata</p>
-       <p class="ingPanino">- Bacon croccante</p>
-       <p class="ingPanino">- Senape al miele</p>
-       <p class="ingPanino">- Ketchup</p>
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Doppio Hamburger (scottona 120g x2)</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Iceberg</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Pomodoro</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Cheddar</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Cipolla caramellata</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Bacon croccante</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Senape al miele</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Ketchup</p>
      </div class="paninoDesc">
      <p>11.5</p>
    </div>
@@ -91,16 +113,23 @@
 <div class="span"></div>
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">il gourmet</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- Hamburger (scottona 120g)</p>
-       <p class="ingPanino">- ulienne
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Hamburger (scottona 120g)</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Julienne
 di iceberg in citronette alle erbe aromatiche</p>
-       <p class="ingPanino">- Pomodorini confit</p>
-       <p class="ingPanino">- Cialda di pecorino</p>
-       <p class="ingPanino">- Salsa Rava’</p>
-       <p class="ingPanino">- Maionese</p>
+<div class="spanP"></div>
+       <p class="ingPanino">Pomodorini confit</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Cialda di pecorino</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Salsa Rava’</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Maionese</p>
      </div class="paninoDesc">
      <p>8.5</p>
    </div>
@@ -108,16 +137,24 @@ di iceberg in citronette alle erbe aromatiche</p>
 <div class="span"></div>
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">il classico</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- Hamburger (Scottona 120g)</p>
-       <p class="ingPanino">- Cetriolini</p>
-       <p class="ingPanino">- Insalata</p>
-       <p class="ingPanino">- Pomodori</p>
-       <p class="ingPanino">- Cheddar</p>
-       <p class="ingPanino">- Bacon croccante</p>
-       <p class="ingPanino">- Ketchup e maionese</p>
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Hamburger (Scottona 120g)</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Cetriolini</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Insalata</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Pomodori</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Cheddar</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Bacon croccante</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Ketchup e maionese</p>
      </div class="paninoDesc">
      <p>8</p>
    </div>
@@ -125,14 +162,20 @@ di iceberg in citronette alle erbe aromatiche</p>
 <div class="span"></div>
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">pulled pork</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- 150g di sfilacci di maiale</p>
-       <p class="ingPanino">- Cipolla rossa caramellata</p>
-       <p class="ingPanino">- Bacon croccante</p>
-       <p class="ingPanino">- Cheddar</p>
-       <p class="ingPanino">- Senape al miele</p>
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">150g di sfilacci di maiale</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Cipolla rossa caramellata</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Bacon croccante</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Cheddar</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Senape al miele</p>
      </div class="paninoDesc">
      <p>7.5</p>
    </div>
@@ -141,16 +184,22 @@ di iceberg in citronette alle erbe aromatiche</p>
 
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">il pirata</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- Filetto di platessa 150g (pastellato alle erbe aromatiche FRITTO)</p>
-       <p class="ingPanino">- Julienne di iceberg in citronette alle erbe aromatiche</p>
-       <p class="ingPanino">- Pesto di rucola</p>
-       <p class="ingPanino">- Julienne di zucchine marinate in salsa
-teriyaki</p>
-       <p class="ingPanino">- Pomodorini confit</p>
-       <p class="ingPanino">- Maionese all’erba cipollina</p>
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Filetto di platessa 150g (pastellato alle erbe aromatiche FRITTO)</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Julienne di iceberg in citronette alle erbe aromatiche</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Pesto di rucola</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Julienne di zucchine marinate in salsa di soia</p><div class="spanP"></div>
+       <p class="ingPanino">Pomodorini confit</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Maionese all’erba cipollina</p>
+
      </div class="paninoDesc">
      <p>8</p>
    </div>
@@ -160,16 +209,23 @@ teriyaki</p>
 
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">il piccante</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- Hamburger
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Hamburger
 piccante (scottona 120g)</p>
-       <p class="ingPanino">- Iceberg</p>
-       <p class="ingPanino">- Pomodoro</p>
-       <p class="ingPanino">- Nduja</p>
-       <p class="ingPanino">- Senape al miele</p>
-       <p class="ingPanino">- Bbq piccante</p>
+<div class="spanP"></div>
+       <p class="ingPanino">Iceberg</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Pomodoro</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Nduja</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Senape al miele</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Bbq piccante</p>
      </div class="paninoDesc">
      <p>8.5</p>
    </div>
@@ -180,13 +236,18 @@ piccante (scottona 120g)</p>
 
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">il delicato</p>
-       <p class="ingPanino">- Bun Artigianale con sesamo</p>
-       <p class="ingPanino">- 150g di petto di pollo alla griglia</p>
-       <p class="ingPanino">- lienne di iceberg in citronette alle erbe aromatiche</p>
-       <p class="ingPanino">- Scaglie di grana</p>
-       <p class="ingPanino">- Julienne di zucchine in salsa teryaki</p>
+       <p class="ingPanino">Bun Artigianale con sesamo</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">150g di petto di pollo alla griglia</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Iceberg</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Scaglie di grana</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Julienne di zucchine in salsa di soia</p>
 
      </div class="paninoDesc">
      <p>8.5</p>
@@ -197,14 +258,20 @@ piccante (scottona 120g)</p>
 
 
 <div class="rowpanino">
+  <img src="static/svg/panino3d.svg">
      <div class="paninoDesc">
        <p class="titoloPanino">vegan size</p>
-       <p class="ingPanino">- Bun Artigianale</p>
-       <p class="ingPanino">- Hamburger di verdure miste (150g)</p>
-       <p class="ingPanino">- Iceberg</p>
-       <p class="ingPanino">- Julienne di zucchine marinate in salsa teryaki</p>
-       <p class="ingPanino">- Pomodorini confit</p>
-       <p class="ingPanino">- Pesto di rucola</p>
+       <p class="ingPanino">Bun Artigianale</p>
+<div class="spanP"></div>
+       <p class="ingPanino">Hamburger di patate, zucchine e melanzane (150g)</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Iceberg</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Julienne di zucchine marinate in salsa teryaki</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Pomodorini confit</p>
+       <div class="spanP"></div>
+       <p class="ingPanino">Pesto di rucola</p>
      </div class="paninoDesc">
      <p>7</p>
    </div>
