--- a/bar.html
+++ b/bar.html
@@ -5,7 +5,7 @@
 	<link href="static/style.css" rel="stylesheet">
    <meta name="viewport" content="width=device-width, initial-scale=1"/>
    <link rel="shortcut icon" href="static/svg/logo.svg" />
-	<title>Rava Pranzo</title>
+	<title>Rava Cena</title>
 </head>
 <body>
  <div class="bg">
@@ -20,11 +20,11 @@
     <li><a href="bevande.html">Bevande</a></li>
       <li><a href="dessert.html">Dessert</a></li>
    	<li><a href="aperitivo.html">Aperitivo</a></li>
-   	<li><a id="selected">Bar</a></li>
+   	<li id="selected"><a id="selectedA">Bar</a></li>
 
    </ul>
 
-   <div class="menu" id="primo">
+   <div class="menu" id="primoultimo">
    
 
 
@@ -95,10 +95,6 @@
 
    </div>
 
-   <script
-		src="https://code.jquery.com/jquery-3.6.0.min.js"
-		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-		crossorigin="anonymous"></script>
-   <script src="static/app.js"></script>
+  
 </body>
 </html>
