--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1"/>
    <link rel="shortcut icon" href="static/svg/logo.svg" />
     <link href="static/style.css" rel="stylesheet">
-    <title>Rava Pranzo</title>
+    <title>Rava Cena</title>
      <meta charset="utf-8">
      <title>Menu</title>
   </head>
@@ -28,7 +28,7 @@
      
    </nav>
    <ul id="ul">
-    <li><a id="selected">Menu</a></li>
+    <li id="selected"><a id="selectedA">Menu</a></li>
     <li><a href="bevande.html">Bevande</a></li></li>
     <li><a href="dessert.html">Dessert</a>
     <li><a href="aperitivo.html">Aperitivo</a></li>
